# Rasterizer

./: BMP.h  CMakeLists.txt  cone.cpp  cone.hpp  directional_light.cpp  directional_light.hpp  light.cpp  light.hpp  main.cpp  mesh.cpp  mesh.hpp  point_light.cpp  point_light.hpp  rasterizer.cpp  rasterizer.hpp  simple_triangle.cpp  simple_triangle.hpp  sphere.cpp  sphere.hpp  vector.cpp  vector.hpp  vertex.hpp  vertex_processor.cpp  vertex_processor.hpp
